Closed
Bug 724886
Opened 13 years ago
Closed 13 years ago
Push images from plugins instead of pulling from nsObjectFrame
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla13
People
(Reporter: bas.schouten, Assigned: bas.schouten)
References
Details
Attachments
(1 file, 1 obsolete file)
20.54 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
As we progress om making the NPAPI Async extension work, we need to push images from the plugin code rather than pulling them from nsObjectFrame. That way the plugin code can also update the images on the container as new surfaces are set current.
Now that the refactoring of image containers is done so that they are layermanager independent we can do this.
Assignee | ||
Comment 1•13 years ago
|
||
This patch should do the trick, the MacIOSurface path could be made to work a little bit more optimal now that we push instead of pull, but since this shouldn't cause any regressions I suggest we do that in a followup.
Attachment #595105 -
Flags: review?(roc)
Comment on attachment 595105 [details] [diff] [review]
Push images instead of pulling
Review of attachment 595105 [details] [diff] [review]:
-----------------------------------------------------------------
Nice
::: dom/plugins/ipc/PluginInstanceParent.h
@@ +299,5 @@
> // |aSize|. Return true if successful.
> bool CreateBackground(const nsIntSize& aSize);
> void DestroyBackground();
> SurfaceDescriptor BackgroundDescriptor() /*const*/;
> + mozilla::layers::ImageContainer *GetImageContainer();
Add a typedef to make this prefixing go away
Attachment #595105 -
Flags: review?(roc) → review+
Assignee | ||
Comment 3•13 years ago
|
||
Some issues found during testing were fixed. We now deal with an instance going away due to plugin crashing causing no container to be found, and some of the mac code was fixed up to compile/behave correctly.
Attachment #595105 -
Attachment is obsolete: true
Attachment #595316 -
Flags: review?(roc)
Attachment #595316 -
Flags: review?(roc) → review+
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•