Bug 724886: Push images from plugin code instead of pulling from nsObjectFrame. r=roc