dom/plugins/ipc/PluginInstanceParent.cpp
@@ -626,7 +626,7 @@ PluginInstanceParent::HandleGUIEvent(const nsGUIEvent& anEvent, bool* handled)
 #endif
 
 nsresult
-PluginInstanceParent::GetImage(ImageContainer* aContainer, Image** aImage)
+PluginInstanceParent::GetImageContainer(ImageContainer** aContainer)
 {
 #ifdef XP_MACOSX
     nsIOSurface* ioSurface = NULL;
@@ -650,8 +650,14 @@ PluginInstanceParent::GetImage(ImageContainer* aContainer, Image** aImage)
     }
 #endif
 
+    ImageContainer *container = GetImageContainer();
+
+    if (!container) {
+        return NS_ERROR_FAILURE;
+    }
+
     nsRefPtr<Image> image;
-    image = aContainer->CreateImage(&format, 1);
+    image = container->CreateImage(&format, 1);
     if (!image) {
         return NS_ERROR_FAILURE;
     }
@@ -663,7 +669,10 @@ PluginInstanceParent::GetImage(ImageContainer* aContainer, Image** aImage)
         MacIOSurfaceImage::Data ioData;
         ioData.mIOSurface = ioSurface;
         ioImage->SetData(ioData);
-        *aImage = image.forget().get();
+        container->SetCurrentImage(ioImage);
+
+        NS_IF_ADDREF(container);
+        *aContainer = container;
         return NS_OK;
     }
 #endif
@@ -675,7 +684,10 @@ PluginInstanceParent::GetImage(ImageContainer* aContainer, Image** aImage)
     cairoData.mSize = mFrontSurface->GetSize();
     pluginImage->SetData(cairoData);
 
-    *aImage = image.forget().get();
+    container->SetCurrentImage(pluginImage);
+
+    NS_IF_ADDREF(container);
+    *aContainer = container;
     return NS_OK;
 }
 
@@ -851,6 +863,17 @@ PluginInstanceParent::BackgroundDescriptor()
     // If this is ever used, which it shouldn't be, it will trigger a
     // hard assertion in IPDL-generated code.
     return SurfaceDescriptor();
+}
+
+ImageContainer*
+PluginInstanceParent::GetImageContainer()
+{
+  if (mImageContainer) {
+    return mImageContainer;
+  }
+
+  mImageContainer = LayerManager::CreateImageContainer();
+  return mImageContainer;
 }
 
 PPluginBackgroundDestroyerParent*
